# lpg_inspector

./: .gitignore  Dockerfile  LICENSE  README.md  client.py  deploy.py  fix_dockerfile.py  fix_readme.py  inference.py  models.py  openenv.yaml  pyproject.toml  requirements.txt  test_client.py  test_environment.py  test_generator.py  test_graders.py  test_models.py  upload_dockerfile.py
server/: app.py  data_generator.py  environment.py  graders.py
